# Fraud-Detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
.agents/: AGENTS.md
notebooks/: 01_Business_Understanding.ipynb  02_Data_Understanding.ipynb  03_EDA.ipynb  04_Preprocessing.ipynb  05_Baseline_Models.ipynb  08_Threshold_Tuning.ipynb
reports/: baseline_model_results.csv
