[project]
name = "fraud-detection"
version = "0.1.0"
description = "Credit card fraud detection using machine learning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.4.0",
    "imbalanced-learn>=0.12.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "shap>=0.46.0",
    "numba>=0.63.1",
    "llvmlite>=0.46.0",
    "eli5>=0.13.0",
    "tqdm>=4.0.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
    "nbformat>=5.9.0",
]

